Closed Bug 765588 Opened 13 years ago Closed 13 years ago

Named properties on CSSFontFaceStyleDecl broken

Categories

(Core :: DOM: CSS Object Model, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17

People

(Reporter: Ms2ger, Assigned: bzbarsky)

References

()

Details

Attachments

(1 file)

See <http://software.hixie.ch/utilities/js/live-dom-viewer/saved/1588>. We throw 'Exception... "Could not convert JavaScript argument" nsresult: "0x80570009 (NS_ERROR_XPC_BAD_CONVERT_JS)"...', because the xpc_qsUnwrapThis to nsICSSDeclaration in nsIDOMCSS2Properties_Get fails. I guess we'll need to have nsCSSFontFaceStyleDecl implement nsICSSDeclaration as well as nsIDOMCSSDeclaration, and audit all other implementations.
This is not a CSSStyleDeclaration; the actual set of supported properties needs to be different. So it's not at all clear to me that the named property thing should work at all.
Component: DOM → DOM: CSS Object Model
QA Contact: general → style-system
That's not what the spec says... <http://dev.w3.org/csswg/cssom/#cssfontfacerule>
Well, the spec is totally broken. What, exactly, should .style.azimuth return on a font-face rule? What should happen when you set .style.display on such a rule? Maybe this section of the spec was written before CSS2Properties was merged into CSSStyleDeclaration? Or maybe like most of CSSOM it's just broken and unmaintained? Do you want to raise the spec issue, or should I? ;)
Blocks: 753517
Note that in bug 753517 I plan to disappear these props from here altogether (which will be somewhat different than them throwing). Hence the lack of a test for them working, though I could certainly add a test for the getter not throwing.
Assignee: nobody → bzbarsky
Whiteboard: [need review]
Comment on attachment 637268 [details] [diff] [review] Make CSSFontFaceStyleDecl an nsICSSDeclaration. r=dbaron
Attachment #637268 - Flags: review?(dbaron) → review+
Flags: in-testsuite-
Whiteboard: [need review]
Target Milestone: --- → mozilla17
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: