Bug 765588.  Make CSSFontFaceStyleDecl an nsICSSDeclaration.  r=dbaron